[package]
name = "tree-sitter-dot"
description = "DOT grammar for the tree-sitter parsing library"
version = "0.1.6"
authors = ["rydesun <rydesun@gmail.com>"]
keywords = ["incremental", "parsing", "dot", "graphviz"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rydesun/tree-sitter-dot"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
